--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ twitter_username: vityawassup
 github_username:  viktorbezhenar
 
 header_pages:
-- bookmarks.md
+- About.md
 
 plugins:
  - jekyll-feed
