--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,16 @@
-title: Vik's thoughts, digests and links
+title: Vik's think space
 author: Viktor Bezhenar
 email: viktor.bezhenar@gmail.com
 description: > # this means to ignore newlines until "twitter_username:"
   Viktor Bezhenar is an experienced project management professional that likes to write about
-  software development processes and similar stuff
+  software development processes, product development, tech trends, just trends and thoughths:so any stuff that comes to mind
 
 theme: minima
 
 twitter_username: vityawassup
 github_username:  viktorbezhenar
+linkedin_username: viktor-bezhenar-baaa7657
+facebook_username: viktor.bezhenar.5
 
 header_pages:
 
